# attack_CNN-No_Hack_No_CTF_2025-

./: Dockerfile  README.md  docker-compose.yml  flag.txt  main.py  predict.py  pyproject.toml  requirements.txt
templates/: index.html  result.html
