[project]
name = "adverserial-attack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.0",
    "flask>=3.1.1",
    "huggingface-hub>=0.33.2",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "ultralytics",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/yoni13/yolov10" }
